# Fantatsu

./: CHANGELOG.md
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  waifu2x_jni.cpp
app/src/main/java/eu/kanade/presentation/more/settings/screen/: SettingsReaderScreen.kt
app/src/main/java/eu/kanade/presentation/reader/: PageLayoutSelectDialog.kt
app/src/main/java/eu/kanade/presentation/reader/appbars/: ReaderAppBars.kt  ReaderBottomBar.kt
app/src/main/java/eu/kanade/presentation/reader/settings/: ColorFilterPage.kt  ReadingModePage.kt
app/src/main/java/eu/kanade/tachiyomi/data/coil/: TachiyomiImageDecoder.kt  Utils.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/: ReaderActivity.kt  ReaderViewModel.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/loader/: HttpPageLoader.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/model/: InsertPage.kt  ReaderPage.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/setting/: ReaderPreferences.kt  ReaderSettingsScreenModel.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/viewer/: ReaderPageImageView.kt  ViewerConfig.kt
app/src/main/java/eu/kanade/tachiyomi/util/waifu2x/: ImageEnhancementCache.kt  ImageEnhancer.kt  Waifu2x.kt
app/src/main/res/drawable/: ic_page_24dp.xml
core/common/src/main/kotlin/tachiyomi/core/common/util/system/: ImageUtil.kt
i18n/src/commonMain/moko-resources/base/: strings.xml
i18n/src/commonMain/moko-resources/zh-rCN/: strings.xml
i18n/src/commonMain/moko-resources/zh-rTW/: strings.xml
(+8 files in other folders)
